manifest.json: update to add name etc.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "The Digital Anon",
+  "name": "The Digital Anon: A Genetic Digital Edition of Virginia Woolf's Final Essays",
   "icons": [
     {
       "src": "favicon.ico",
