more fiddling with package.json. Think I'm done now

--- a/package.json
+++ b/package.json
@@ -831,7 +831,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "(cd frontend && npm start) & (cd server && npm start)"
+    "start": "(cd frontend && npm start) & (cd server && npm run dev)"
   },
   "keywords": [],
   "author": "",
