--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.mjs"
+    "start": "node server.mjs",
+    "dev": "nodemon server.mjs"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.0.0",
+    "mongodb": "^6.0.0"
+  }, 
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
