--- a/package.json
+++ b/package.json
@@ -474,6 +474,7 @@
     "node-forge": "^1.3.1",
     "node-int64": "^0.4.0",
     "node-releases": "^2.0.13",
+    "nodemon": "^3.0.1",
     "normalize-path": "^3.0.0",
     "normalize-range": "^0.1.2",
     "normalize-url": "^6.1.0",
@@ -696,6 +697,7 @@
     "stackframe": "^1.3.4",
     "statuses": "^2.0.1",
     "stop-iteration-iterator": "^1.0.0",
+    "string_decoder": "^1.3.0",
     "string-length": "^4.0.2",
     "string-natural-compare": "^3.0.1",
     "string-width": "^4.2.3",
@@ -703,7 +705,6 @@
     "string.prototype.trim": "^1.2.7",
     "string.prototype.trimend": "^1.0.6",
     "string.prototype.trimstart": "^1.0.6",
-    "string_decoder": "^1.3.0",
     "stringify-object": "^3.3.0",
     "strip-ansi": "^6.0.1",
     "strip-bom": "^4.0.0",
@@ -829,7 +830,6 @@
     "yargs-parser": "^20.2.9",
     "yocto-queue": "^0.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "(cd frontend && npm start) & (cd server && npm run dev)"
   },
