changed start script in package.json

--- a/package.json
+++ b/package.json
@@ -832,7 +832,7 @@
     "yocto-queue": "^0.1.0"
   },
   "scripts": {
-    "start": "(cd frontend && npm start) & (cd server && npm run dev)",
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build"
